# autonomous-uavs-simulation-analysis

./: .gitignore  LICENSE  README.md  mav.parm  mav.tlog.raw
ros2_ws/: mav.parm  mav.tlog.raw  mav_2_1.parm  mav_3_1.parm  mav_4_1.parm  mav_5_1.parm  mav_6_1.parm
ros2_ws/src/drone_swarm/: package.xml  setup.py
ros2_ws/src/drone_swarm/drone_swarm/: drone_controller.py  swarm_coordinator.py  target_selector.py
ros2_ws/src/drone_swarm/launch/: drone_individual.launch.py  mavros_launch.py  multi_drone_launch.py  swarm_launch.py
ros2_ws/src/drone_swarm/models/drone0/: model.config
ros2_ws/src/drone_swarm/models/drone00/: model.config
ros2_ws/src/drone_swarm/models/drone1/: model.config
ros2_ws/src/drone_swarm/models/drone10/: model.config
ros2_ws/src/drone_swarm/models/drone2/: model.config  model.sdf
ros2_ws/src/drone_swarm/models/drone3/: model.config  model.sdf
ros2_ws/src/drone_swarm/models/drone4/: model.config  model.sdf
ros2_ws/src/drone_swarm/models/drone5/: model.config  model.sdf
ros2_ws/src/drone_swarm/models/drone6/: model.sdf
ros2_ws/src/drone_swarm/models/drone9/: model.config
ros2_ws/src/drone_swarm/scripts/: launch_swarm_sitl.sh
ros2_ws/src/drone_swarm/worlds/: drone_runway_swarm.sdf  swarm_world.sdf
ros2_ws/src/lws_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/lws_bringup/launch/: lws.launch.xml  lws_visualization.launch.xml  lws_with_2_drones.launch.xml
ros2_ws/src/lws_bringup/worlds/: test_world.sdf
ros2_ws/src/lws_description/: CMakeLists.txt  package.xml
ros2_ws/src/lws_driver/: package.xml  setup.cfg  setup.py
(+8 files in other folders)
