<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_swarm</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ostaphutsal04@gmail.com">ostap</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>mavros</depend>
  <depend>cv_bridge</depend>
  <depend>opencv2</depend>
  <depend>numpy</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>tkinter</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
